2009-12-09  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/DefaultPolarItemRenderer.java
    (getLegendItem): Handle multiple datasets,
    * source/org/jfree/chart/plot/PolarPlot.java
    (fixedLegendItems): New field,
    (getFixedLegendItems): New method,
    (setFixedLegendItems): Likewise,
    (getIndexOf(PolarItemRenderer)): Likewise,
    (getLegendItems): Handle multiple datasets,
    (equals): Updated for new fields.

2009-12-08  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/XYBoxAndWhiskerRenderer.java
    (drawVerticalItems): Check for null outliers.

2009-12-08  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/statistics/HistogramDataset.java
    (addSeries): Fire dataset change event.

2009-11-27  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/PolarPlot.java
    (axis): Removed,
    (dataset): Likewise,
    (renderer): Likewise,
    (axes): New field,
    (axisLocations): Likewise,
    (datasets): Likewise,
    (renderers): Likewise,
    (datasetToAxesMap): Likewise,
    (PolarPlot(XYDataset, ValueAxis, PolarItemRenderer)): Initialise new fields,
    (getAxis): Delegate to new method,
    (ValueAxis getAxis(int)): New method,
    (setAxis(ValueAxis)): Delegate to new method,
    (setAxis(int, ValueAxis)): New method,
    (setAxis(int, ValueAxis, boolean)): Likewise,
    (getAxisLocation): New method,
    (getAxisLocation(int)): Likewise,
    (setAxisLocation(PolarAxisLocation)): Likewise,
    (setAxisLocation(PolarAxisLocation, boolean)): Likewise,
    (getDataset): Delegate to new method,
    (getDataset(int)): New method,
    (setDataset(XYDataset)): Delegate to new method,
    (setDataset(int, XYDataset)): New method,
    (indexOf(XYDataset)): New method,
    (getRenderer): Delegate to new method,
    (getRenderer(int)): New method,
    (setRenderer(PolarItemRenderer)): Delegate to new method,